processed/jira/txt/LU/LU-18821.txt
Key:        LU-18821
Summary:    fix [-Werror=pointer-to-int-cast] in obd_quota_iter()
Link:       https://jira.whamcloud.com/browse/LU-18821
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Jian Yu
Reporter:   Jian Yu
Created:    Mon, 17 Mar 2025 16:26:38 +0000
Updated:    Thu, 3 Apr 2025 12:13:26 +0000
Resolved:   Wed, 26 Mar 2025 12:47:26 +0000

--- Description ---
Distro: Debian 12

Kernel: 6.1.0-32-686-pae

Gcc: 12.2

lustre/include/obd_class.h: In function 'obd_quota_iter':
lustre/include/obd_class.h:1289:39: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
 1289 |                 oqctl->qc_iter_list = (__u64)list;
      |                                       ^
cc1: all warnings being treated as errors

--- Comment (pjones, Wed, 26 Mar 2025 12:47:26 +0000) ---
Merged for 2.17

--- Comment (gerrit, Wed, 26 Mar 2025 04:06:26 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/58440/

Subject: LU-18821 build: fix [-Werror=pointer-to-int-cast] error

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 532ed744188343cc3dc058ec96f55df94a6c8dab

--- Comment (gerrit, Mon, 17 Mar 2025 17:30:26 +0000) ---
"Jian Yu " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/58440

Subject: LU-18821 build: fix [-Werror=pointer-to-int-cast] error

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 690a1a7437a2f50073d8f1c1052c2e4ebe75a796
